--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "postcss-load-config": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -18,6 +19,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "postcss-file": "^0.1.1",
     "postcss-import": "^15.1.0",
     "tailwindcss": "^3.2.7",
     "vite": "^4.1.0"
