--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "file-saver": "^2.0.5",
     "merge-images": "^2.0.0",
     "postcss-load-config": "^4.0.1",
     "react": "^18.2.0",
