--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "merge-images": "^2.0.0",
     "postcss-load-config": "^4.0.1",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
