--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.9",
     "axios": "^1.3.4",
     "file-saver": "^2.0.5",
     "merge-images": "^2.0.0",
