--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "file-saver": "^2.0.5",
     "merge-images": "^2.0.0",
+    "nookies": "^2.5.2",
     "postcss-load-config": "^4.0.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
