--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-VITE_API_BASE_URL = http://172.20.42.38:5000/api
-VITE_IMAGE_BASE_URL = http://172.20.42.38:5000/storage
+#VITE_API_BASE_URL = http://172.20.42.38:5000/api
+#VITE_IMAGE_BASE_URL = http://172.20.42.38:5000/storage
+VITE_API_BASE_URL = https://lightsnap-api.lws.codes/api
+VITE_IMAGE_BASE_URL = https://lightsnap-api.lws.codes/storage
